# opengl-cpp-studies

./: .gitignore  CMakeLists.txt  buildandrun
include/glad/: glad.h
shaders/: default.frag  default.vs
src/: glad.c  main.cpp  shader.h
